@@ -441,3 +441,4 @@ One shoudl be able to wish for a new limb.
 Ring of conflict should cause two-headed mooses to kill themselves.
 You should be able to wish for anything. (Very problematic, I know)
 Leash.
+Gas masks
