@@ -277,6 +277,7 @@
 
 #define AIR (GAS_ID + 1)
 #define MAGICAL_AIR (GAS_ID + 2)
+#define SMOKE (GAS_ID + 3)
 
 #define LIQUID_ID (4096 * 4)
 
