@@ -7,6 +7,10 @@ is also provided AS IS and is probably completely unreadable.
 
 ------------------------------------------------------------------------------------
 
+March 08 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* Smoke added 
+	
 March 7 2003 Timo Kiviluoto <sonor@phpoint.fi>
 
 	* A terrible bug in the door breaking code fixed
